# DBMS

./: CHANGELOG.md  Cargo.toml  DECISIONS.md  NOTICE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/btree/: Cargo.toml
crates/btree/src/: cursor.rs  lib.rs  node.rs  tree.rs
crates/btree/tests/: btree_model.rs  btree_robustness.rs  btree_snapshot.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: codec.rs  db.rs  job.rs  lib.rs  policy.rs  schema.rs  store.rs
crates/catalog/tests/: catalog_constraints.rs  catalog_foreign_keys.rs  catalog_generated.rs  catalog_index.rs  catalog_index_prop.rs  catalog_schema.rs  catalog_snapshot.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs
crates/common/: Cargo.toml
crates/common/src/: clock.rs  crc.rs  error.rs  io.rs  lib.rs  rng.rs
crates/dbms/: Cargo.toml
crates/dbms/benches/: engine.rs
crates/dbms/src/: cursor.rs  db.rs  inspect.rs  lib.rs  result.rs
crates/dbms/tests/: acceptance.rs  api.rs  robustness.rs
crates/edb/: Cargo.toml
crates/edb/benches/: engine.rs
crates/edb/src/: cursor.rs  db.rs  lib.rs  result.rs
crates/edb/tests/: acceptance.rs  api.rs  robustness.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/pager/: Cargo.toml
crates/pager/src/: cache.rs  crc.rs  freelist.rs  lib.rs  meta.rs  page.rs  pager.rs
crates/pager/tests/: pager_crash.rs  pager_freelist.rs  pager_robustness.rs
crates/proto/: Cargo.toml
crates/proto/src/: ast.rs  ir.rs  lib.rs  result.rs  wire.rs
crates/proto/tests/: proto_fuzz.rs  proto_roundtrip.rs
crates/query/: Cargo.toml
crates/query/src/: engine.rs  eval.rs  exec.rs  lib.rs  lower.rs  plan.rs  stream.rs  validate.rs  write.rs
crates/query/tests/: engine.rs  exec_reference.rs  lower_equiv.rs  planner.rs  streaming.rs  validate_catalog.rs  write_path.rs
crates/txn/: Cargo.toml
crates/txn/src/: db.rs  job.rs  lib.rs  registry.rs  writer.rs
crates/txn/tests/: loom_registry.rs  txn_basic.rs  txn_durability.rs  txn_long_reader.rs  txn_sim.rs
crates/types/: Cargo.toml
crates/types/src/: key.rs  lib.rs  msgpack.rs  row.rs  uuid.rs  value.rs
crates/types/tests/: key_order.rs  row_wire.rs  uuid_v7.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  PLAN.md  RELEASE.md  SPEC.md
