[package]
name = "catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Schema model, system catalog, DDL, constraint enforcement (Phase 6)."

[dependencies]
common.workspace = true
types.workspace = true
txn.workspace = true
thiserror.workspace = true

[lints]
workspace = true
