[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "REPL, scenario runner, and concurrency playground (Phase 11)."

[[bin]]
name = "otf-dbms"
path = "src/main.rs"
# The binary shares its name with the `otf-dbms` library crate; skip rustdoc for
# it to avoid a doc output-path collision (a CLI needs no published HTML docs).
doc = false

[dependencies]
otf-dbms.workspace = true

[lints]
workspace = true
