[package]
name = "otf-dbms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "OTF DBMS — the public embedded database API; aggregates the engine error taxonomy (Phase 10)."

[lib]
name = "otf_dbms"

[dependencies]
common.workspace = true
pager.workspace = true
btree.workspace = true
txn.workspace = true
types.workspace = true
catalog.workspace = true
index.workspace = true
proto.workspace = true
query.workspace = true
thiserror.workspace = true

[dev-dependencies]
common.workspace = true

[lints]
workspace = true
