[package]
name = "index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Secondary B+tree index maintenance, kept atomic with base-row writes (Phase 7)."

[dependencies]
common.workspace = true
types.workspace = true
txn.workspace = true
thiserror.workspace = true

[lints]
workspace = true
