[package]
name = "pager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Fixed-size paged file I/O: checksums, page cache, meta pages, freelist (Phase 2)."

[dependencies]
common.workspace = true
thiserror.workspace = true

[lints]
workspace = true
