[package]
name = "proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Query AST (pipeline + clause), logical-plan IR, hardened MessagePack codec (Phase 8)."

[dependencies]
common.workspace = true
types.workspace = true
thiserror.workspace = true

[lints]
workspace = true
