[package]
name = "query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Surface lowering, validator, planner, executor, write path, EXPLAIN (Phase 9)."

[dependencies]
common.workspace = true
types.workspace = true
proto.workspace = true
catalog.workspace = true
index.workspace = true
txn.workspace = true
thiserror.workspace = true

[lints]
workspace = true
