[package]
name = "txn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Single-writer transactions, MVCC snapshots, commit/group-commit, recovery (Phase 4)."

[dependencies]
common.workspace = true
pager.workspace = true
btree.workspace = true
thiserror.workspace = true

[dev-dependencies]
common.workspace = true
pager.workspace = true

# `loom` models the writer/snapshot handoff. It is only compiled under
# `--cfg loom` (never in normal builds, tests, or CI gates), keeping it out of
# the shipped dependency graph.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints]
workspace = true
