[package]
name = "types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Value model, order-preserving key encoding, row encoding (Phase 5)."

[dependencies]
common.workspace = true
thiserror.workspace = true

[lints]
workspace = true
